# transformerai-the-transfomerai-engineer

./: Problem-Sets.txt  README.md  ttte.code-workspace  urls.md
projects/Low-Level-Design (LLD)/: README.md
projects/The-AI-Engineer/: The AI Engineer.docx
projects/The-AI-Engineer/UW-CS-Curriculum/: COMPUTER SCIENCE & ENGINEERING.html  CSE Core Courses.docx  CSE Elective Courses.docx  Computer Engineering Systems Electives.docx  Computer Science _ Undergraduate Announcement.html  Course Assistants _ Department of Mathematics _ University of Washington.html  Course Materials _ Department of Mathematics _ University of Washington.html  MATHEMATICS.html  MATHEMATICS_AUTUMN.html  MATHEMATICS_WINTER.html  Undergraduate Courses.docx  Upcoming Courses _ Department of Mathematics _ University of Washington.html
projects/The-LeetCode-Engineer/: BST_problemSets.md  Blind75.md  CurrentStatus.xlsx  Interviewing-Strategy.docx  MostFrequent500.md  Transformer AI - The Leet-Code Engineer.docx  problem-order.txt  problem-sets-list.docx  ~$ansformer AI - The Leet-Code Engineer.docx  ~$oblem-sets-list.docx  ~$terviewing-Strategy.docx  ~WRL0210.tmp  ~WRL1463.tmp  ~WRL2309.tmp
projects/The-LeetCode-Engineer/code/: 15_3sum.py
projects/The-LeetCode-Engineer/projects/: enumerate.js
projects/The-LeetCode-Engineer/projects/leetcode-utils/: pyproject.toml
projects/The-LeetCode-Engineer/projects/leetcode-utils/src/leetcode_utils/: graphql_client.py  leetcode_types.py
projects/The-LeetCode-Engineer/resources/: youtube_videos.md
projects/The-LeetCode-Engineer/utils_code/: runner.py
(+658 files in other folders)
